--- a/index.html
+++ b/index.html
@@ -1,72 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
-    -->
-
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
-
-    <!--
-      This is the page head - it contains info the browser uses
-      Like the title, which appears on the browser tab but not inside the page
-      Further down you'll see the content that displays in the page
-    -->
-    <title>Hello World!</title>
-
-    <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
-
-    <!-- The website JavaScript file -->
-    <script src="/script.js" defer></script>
+    <meta charset="utf-8">
+    <title>Tour Virtual 360°</title>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <style>
+      body { margin: 0; }
+      .hotspot {
+        cursor: pointer;
+        background: rgba(255, 255, 255, 0.8);
+        padding: 10px;
+        border-radius: 6px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <!--
-      The body includes the content you see in the page
-      Each element is defined using tags, like this <div></div>
-      The attributes like class="wrapper" let us style elements in the CSS
-    -->
-    <div class="wrapper">
-      <div class="content" role="main">
-        <h1 class="title">Hello World!</h1>
-        <img
-          src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
-          class="illustration"
-          alt="Editor illustration"
-          title="Click the image!"
-        />
-        <div class="instructions">
-          <h2>Using this project</h2>
-          <p>
-            This is the Glitch <strong>Hello Website</strong> project. You can
-            use it to build your own site. Check out the code in the editor and open
-            the <span class="fileopener" data-file="TODO.md" data-line="0"
-              >TODO</span> for next steps!
-          </p>
-          <!--  🚧 TODO: ADD BUTTON HERE -->
+    <a-scene>
 
-          <!-- Once you've added the button from TODO.md, click it in the page -->
-          <!-- Check out the function in script.js to see how it works -->
-        </div>
-      </div>
-    </div>
-    <!-- The footer holds our remix button — you can keep or delete it ✂ -->
-    <footer class="footer">
-      <div class="links"></div>
-      <a
-        class="btn--remix"
-        target="_top"
-        href="https://glitch.com/edit/#!/remix/glitch-hello-website"
-      >
-        <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
-          alt=""
-        />
-        Remix on Glitch
-      </a>
-    </footer>
+      <!-- CÉU PANORÂMICO (a cena será trocada dinamicamente) -->
+      <a-sky id="sky" src="https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena1.jpg?v=1745371063357" rotation="0 -90 0"></a-sky>
+
+      <!-- HOTSPOT -->
+      <a-entity id="hotspot"
+                geometry="primitive: plane; height: 0.5; width: 1.5"
+                material="color: #FF6347; opacity: 0.8"
+                position="0 1.6 -3"
+                text="value: Próxima Cena; align: center"
+                class="clickable">
+      </a-entity>
+
+      <!-- CÂMERA E CURSOR PARA VR -->
+      <a-entity camera look-controls wasd-controls position="0 1.6 0">
+        <a-entity cursor="fuse: true; fuseTimeout: 1000"
+                  position="0 0 -1"
+                  geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+                  material="color: yellow; shader: flat">
+        </a-entity>
+      </a-entity>
+
+    </a-scene>
+
+    <script>
+      const imagens = [
+        "https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena1.jpg?v=1745371063357",
+        "https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena2.jpg?v=1745371075685",
+        "https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena3.jpeg?v=1745371078694",
+        "https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena4.jpg?v=1745371082311",
+        "https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena5.jpeg?v=1745371085487",
+        "https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena6.jpg?v=1745371088421"
+      ];
+
+      let indiceAtual = 0;
+      const sky = document.querySelector('#sky');
+      const hotspot = document.querySelector('#hotspot');
+
+      hotspot.addEventListener('click', () => {
+        indiceAtual = (indiceAtual + 1) % imagens.length; // loop
+        sky.setAttribute('src', imagens[indiceAtual]);
+      });
+    </script>
   </body>
 </html>
