--- a/index.html
+++ b/index.html
@@ -6,31 +6,36 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <style>
       body { margin: 0; }
-      .hotspot {
-        cursor: pointer;
-        background: rgba(255, 255, 255, 0.8);
-        padding: 10px;
-        border-radius: 6px;
-        text-align: center;
-      }
     </style>
   </head>
   <body>
     <a-scene>
 
-      <!-- CÉU PANORÂMICO (a cena será trocada dinamicamente) -->
-      <a-sky id="sky" src="https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena1.jpg?v=1745371063357" rotation="0 -90 0"></a-sky>
+      <!-- IMAGEM 360° -->
+      <a-sky id="sky"
+             src="https://cdn.glitch.global/1fd8dfe9-27b6-4669-9072-6363be0bd8e4/cena1.jpg?v=1745371063357"
+             rotation="0 -90 0">
+      </a-sky>
 
-      <!-- HOTSPOT -->
-      <a-entity id="hotspot"
-                geometry="primitive: plane; height: 0.5; width: 1.5"
-                material="color: #FF6347; opacity: 0.8"
-                position="0 1.6 -3"
+      <!-- BOTÃO: PRÓXIMA CENA -->
+      <a-entity id="btnNext"
+                geometry="primitive: plane; height: 0.4; width: 1.5"
+                material="color: #00C851; opacity: 0.8"
+                position="1.6 1.6 -3"
                 text="value: Próxima Cena; align: center"
                 class="clickable">
       </a-entity>
 
-      <!-- CÂMERA E CURSOR PARA VR -->
+      <!-- BOTÃO: VOLTAR CENA -->
+      <a-entity id="btnBack"
+                geometry="primitive: plane; height: 0.4; width: 1.5"
+                material="color: #ff4444; opacity: 0.8"
+                position="-1.6 1.6 -3"
+                text="value: Cena Anterior; align: center"
+                class="clickable">
+      </a-entity>
+
+      <!-- CÂMERA COM CURSOR PARA VR/MOBILE -->
       <a-entity camera look-controls wasd-controls position="0 1.6 0">
         <a-entity cursor="fuse: true; fuseTimeout: 1000"
                   position="0 0 -1"
@@ -53,10 +58,16 @@
 
       let indiceAtual = 0;
       const sky = document.querySelector('#sky');
-      const hotspot = document.querySelector('#hotspot');
+      const btnNext = document.querySelector('#btnNext');
+      const btnBack = document.querySelector('#btnBack');
 
-      hotspot.addEventListener('click', () => {
-        indiceAtual = (indiceAtual + 1) % imagens.length; // loop
+      btnNext.addEventListener('click', () => {
+        indiceAtual = (indiceAtual + 1) % imagens.length;
+        sky.setAttribute('src', imagens[indiceAtual]);
+      });
+
+      btnBack.addEventListener('click', () => {
+        indiceAtual = (indiceAtual - 1 + imagens.length) % imagens.length;
         sky.setAttribute('src', imagens[indiceAtual]);
       });
     </script>
