🐇👚 Checkpoint ./index.html:75448498/27

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <a-scene>
+    <a-scene vr-mode-ui="enabled: true">
 
       <!-- IMAGEM 360° -->
       <a-sky id="sky"
