Carrega setas a partir da pasta setas/

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <!-- BOTÃO IMAGEM: PRÓXIMA CENA -->
       <a-image id="btnNext"
-               src="assets/direita.png"
+               src="setas/direita.png"
                material="color: white"
                position="1.6 1.6 -3"
               
@@ -31,7 +31,7 @@
 
       <!-- BOTÃO IMAGEM: VOLTAR CENA -->
       <a-image id="btnBack"
-               src="assets/esqurda.png"
+               src="setas/esqurda.png"
                
                material="color: white"
                position="-1.6 1.6 -3"
